# 20260701

./: .gitigonre  LICENSE  README.md  main.py  opencode.json  pyproject.toml
.opencode/skills/webwright/: SKILL.md
.opencode/skills/webwright/commands/: craft.md  run.md
.opencode/skills/webwright/reference/: cli_tool_mode.md  playwright_patterns.md  workflow.md
lesson10/: form_demo.html  gui.py  lesson.10_3.ipynb  lesson10_1.py  lesson10_2.py  lesson10_3.py  lesson10_4.py  lesson10_5.py  test.py  test_core.py
lesson11/: README_GRADIO.md  SETUP_GUIDE.md  code_review_lesson11_3.md  leeson11_4.py  lesson11_1.py  lesson11_2.py  lesson11_3.py  lesson11_5.py  lesson11_5_gradio.py  run_gradio.bat  test_gradio.py
lesson5/: lesson5_1.ipynb  lesson5_2.ipynb
lesson6/: lesson6_1.ipynb
lesson7/: lesson7_1.ipynb  lesson7_2.ipynb
lesson8/: lessom8_3.ipynb  lesson8_1.ipynb  lesson8_2.ipynb  lesson8_2.py  lesson8_3.py
lesson9/: lesson9_1.ipynb  lesson9_1.py  lesson9_2.py  lesson9_3.py
