[project]
name = "20260701"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.44.0",
    "jupyterlab>=4.6.1",
    "playwright>=1.61.0",
    "ttkbootstrap>=1.10.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
    "pytest>=8.0.0",
]
